opam-version: "2.0"
maintainer:   "thevoodoos@gmail.com"
authors:      "Ulysse Gérard"
homepage:     "https://github.com/voodoos/merlin-js"
bug-reports:  "https://github.com/voodoos/merlin-js/issues"
dev-repo:     "git+https://github.com/voodoos/merlin-js.git"
license:      "MIT"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.0"}
  "merlin-lib"
  "yojson" {>= "1.6.0"}
  "js_of_ocaml" {>= "5.0.0"}
  "js_of_ocaml-ppx" {>= "5.0.0"}
  "brr" {>= "0.0.4"}
  "ppx_blob" {>= "0.7.2"}
  "code-mirror"
]
pin-depends: [
  ["code-mirror.dev" "git+https://github.com/patricoferris/jsoo-code-mirror#8fe48910e265ff87f9fc94ceb7b3d19fac102a96"]
]
synopsis:
  "Editor helper, provides completion, typing and source browsing for the web"
description:
  "Merlin is an assistant for editing OCaml code. It aims to provide the features available in modern browsers: error reporting, auto completion, source browsing and much more."
