(executable
 (name app)
 (modes js)
 (promote)
 (modules App)
 (libraries
  merlin_client
  code-mirror
  merlin-js.code-mirror
  merlin-js.worker.static))

(executable
 (name dynamic)
 (modes js)
 (promote)
 (modules Dynamic)
 (libraries
  merlin_client
  code-mirror
  merlin-js.code-mirror))

(copy_files
 (mode promote)
 (files worker/merlin_worker.bc.js))

(copy_files
 (mode promote)
 (files worker/merlin_worker.bc.wasm))

(alias
 (name all-js)
 (deps
   merlin_worker.bc.js
   merlin_worker.bc.wasm
   app.bc.js
   dynamic.bc.js))
