(executable
 (name merlin_worker)
 (promote (until-clean))
 (modes js)
 ; (js_of_ocaml
 ; (flags (:standard --target-env=browser)))
 ; (flags (:standard --source-map-inline)))
 (libraries
  static_files
  merlin.kernel
  merlin.utils
  merlin.query_protocol
  merlin.query_commands

  brr
  js_of_ocaml))

 (rule
  (deps
   merlin_worker.bc.js
   client/merlin_client.bc.js
   index.jsx
   package.json
   yarn.lock
   (source_tree node_modules))
  (targets index.js)
  (mode (promote (until-clean)))
  (action (run yarn build)))
