(executable
 (name merlin_worker)
 (promote (until-clean))
 (modes js)
 (js_of_ocaml
  (javascript_files stubs.js)
  (flags (:standard  --debug-info --source-map-inline)))
  ;(flags (:standard --no-inline --debug-info --pretty --source-map-inline)))
 (libraries
  static_files
  protocol
  merlin.kernel
  merlin.utils
  merlin.query_protocol
  merlin.query_commands
  merlin.ocaml_parsing

  brr
  js_of_ocaml))

 (rule
  (deps
   merlin_worker.bc.js
   client/merlin_client.bc.js
   index.jsx
   package.json
   yarn.lock
   (source_tree node_modules))
  (targets index.js)
  (mode (promote (until-clean)))
  (action (run yarn build)))
