(copy_files
 (alias all-js)
 (mode (promote (until-clean)))
 (files %{ocaml-config:standard_library}/*.cmi))

(copy_files
 (alias all-js)
 (mode (promote (until-clean)))
 (files %{ocaml-config:standard_library}/unix/*.cmi))

(copy_files
 (alias all-js)
 (mode (promote (until-clean)))
 (files %{ocaml-config:standard_library}/str/*.cmi))
