(env
 (_ (js_of_ocaml (compilation_mode whole_program))))

(executable
 (name merlin_worker)
 (promote (until-clean))
 (modes js)
 (js_of_ocaml
  (javascript_files stubs.js))
 (libraries
  static_files
  protocol
  merlin-lib.kernel
  merlin-lib.utils
  merlin-lib.query_protocol
  merlin-lib.query_commands
  merlin-lib.ocaml_parsing

  brr
  js_of_ocaml))

;  (rule
;   (deps
;    merlin_worker.bc.js
;    client/merlin_client.bc.js
;    index.jsx
;    package.json
;    yarn.lock
;    (source_tree node_modules))
;   (targets index.js)
;   (mode (promote (until-clean)))
;   (action (run yarn build)))
