(library
 (name worker)
 (public_name merlin-js.worker)
 (js_of_ocaml
  (javascript_files stubs.js)
  (wasm_files stubs.wat)
  )
 (preprocess (pps js_of_ocaml-ppx))
 (libraries
  protocol
  merlin-lib.kernel
  merlin-lib.utils
  merlin-lib.query_protocol
  merlin-lib.query_commands
  merlin-lib.ocaml_parsing
  js_of_ocaml
  yojson))

(env (_ (js_of_ocaml (targets wasm))))
