(data_only_dirs stdlib)

(library
 (name static_files)
 (public_name merlin-js.worker.static)
 (modules static_files)
 (preprocess (pps ppx_blob))
 (libraries merlin-js.protocol)
 (preprocessor_deps
  (glob_files stdlib/*.cmi)))

(rule
 (target static_files.ml)
 (deps
  (glob_files %{ocaml-config:standard_library}/*.cmi)
  (glob_files %{ocaml-config:standard_library}/unix/*.cmi)
  (glob_files %{ocaml-config:standard_library}/str/*.cmi))
 (action (run ocaml %{dep:gen_static.ml} %{deps})))

